--- a/templates/pages/voyages.html.twig
+++ b/templates/pages/voyages.html.twig
@@ -1,6 +1,5 @@
-{% extends "base.html.twig" %}
+{% extends "basefront.html.twig" %}
 
 {% block body %}
-<h1><center> Page des voyages  </center></h1>
-<a href="{{ path('accueil') }}"> accueil</a>
+<h1>Page des voyages</h1>
 {% endblock %}
